--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,30 +44,5 @@ workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
+     - pip install -r requirements.txt
       - build-and-test
-version: 2.1
-jobs:
-  build:
-    docker:
-      - image: cimg/python:3.10.1
-    steps:
-      - checkout
-      - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
-      - run:
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-      - save_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
-          paths:
-            - "venv"
-      - run:
-          name: Running tests
-          command: |
-            . venv/bin/activate
-            python3 tests.py
-      - store_artifacts:
-          path: test-reports/
-          destination: python_app
